<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BS-Dashboard</string>
    <string name="good">좋음</string>
    <string name="normal">보통</string>
    <string name="bad">나쁨</string>
    <string name="very_bad">매우나쁨</string>
    <string name="cqi_baddest">매우\n나쁨</string>
    <string name="aqi">공기질 통합지수</string>
    <string name="aqi_1_hour">지난 1시간 공기질 데이터</string>
    <string name="fine_dust">미세먼지</string>
    <string name="tvoc">휘발성 유기화합물</string>
    <string name="co2">이산화탄소</string>
    <string name="co">일산화탄소</string>
    <string name="virus">바이러스 위험지수</string>
    <string name="language">언어설정</string>
    <string name="korean">한글</string>
    <string name="english">영어</string>
    <string name="temp">온도</string>
    <string name="humid">습도</string>
    <string name="error">에러</string>
    <string name="day">오전</string>
    <string name="night">오후</string>
    <string name="mqtt_connect_btn">연결</string>
    <string name="mqtt_error_get_user_id">유저 정보를 받아오는데 실패했습니다.\n데이터 전송이 일시적으로 중단되었습니다</string>
    <string name="not_paring">연결된 디바이스 없음</string>
    <string name="no_bluetooth_device">해당 기기는 블루투스를 지원하지 않습니다</string>
    <string name="caution_title">경고</string>
    <string name="caution_message">장치와의 연결이 끊어졌습니다.\n다시 연결 해 주세요</string>
    <string name="reconnect_bt_msg">블루투스 연결이 끊어졌습니다.\n다시 블루투스에 연결하시겠습니까?</string>
    <string name="reconnect_bt_ok">연결</string>
    <string name="caution_ok">확인</string>
    <string name="caution_back">뒤로가기</string>
    <string name="select_lang">01 언어 선택</string>
    <string name="connect_device">02 제품 선택</string>
    <string name="connected_device">기존 연결된 기기</string>
    <string name="please_select_lang_main">사용할 언어를 선택해주세요</string>
    <string name="please_select_a_lang_sub">Please select a language</string>
    <string name="korean_lang">한국어</string>
    <string name="eng_lang">English</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="please_select_device">사용하실 제품을 연결해주세요</string>
    <string name="connectable_device">사용 가능한 디바이스</string>
    <string name="complete_select_lang">선택하신 언어로 적용되었습니다</string>
    <string name="skip_lang_msg">언어를 자동으로 설정하였습니다</string>
    <string name="connect">등록하기</string>
    <string name="exit_app_title">앱 종료</string>
    <string name="exit_app_message">대시보드를 종료하시겠습니까?</string>
    <string name="exit_app_yes">종료</string>
    <string name="exit_app_no">취소</string>
    <string name="disconnect_socket">장치가 켜져있는지 확인해주세요</string>
    <string name="no_paring_device">현재 기기를 디바이스에 페어링 하시겠습니까?</string>
    <string name="no_data_text">그래프를 그리는 중입니다</string>
    <string name="no_data_error">그래프를 그리는 도중 오류가 발생했습니다</string>
    <string name="settings">설정</string>
    <string name="power_off">전원 끄기</string>
    <string name="power_on">전원 켜기</string>
    <string name="power">전원</string>
    <string name="fan_control">풍량 조절</string>
    <string name="fan_first">1단</string>
    <string name="fan_second">2단</string>
    <string name="fan_third">3단</string>
    <string name="fan_fourth">4단</string>
    <string name="product_info">제품 정보</string>
    <string name="product_type">제품명</string>
    <string name="bio_sentinel_100">Air Sentinel-100</string>
    <string name="serial_num">시리얼 번호</string>
    <string name="setup_date">설치 날짜</string>
    <string name="company_name">에어시그널(주)</string>
    <string name="information">고객센터 031–756–1251</string>
    <string name="web_site">http://www.airsignal.kr</string>
    <string name="ask_turn_off">전원상태를 변경하시겠습니까?</string>
    <string name="ask_turn_on">전원을 켜시겠습니까?</string>
    <string name="already_connected">이미 연결된 디바이스 입니다</string>
    <string name="exit_complete">장치를 종료했습니다</string>
    <string name="fail_to_change">변경에 실패했습니다</string>
    <string name="retry_please">다시 시도해주세요</string>
    <string name="unpairing_title">페어링 해제</string>
    <string name="unpairing_msg">와 페어링을 해제하시겠습니까?</string>
    <string name="unpairing_ok_btn">해제</string>
    <string name="unpairing_cancel_btn">취소</string>
    <string name="loading_data">데이터를 불러오고 있습니다</string>
    <string name="light_error">일시적인 오류입니다. 다시 접속해주세요</string>
    <string name="unknown_error">예기치 못한 에러가 발생했습니다\n복구중입니다</string>
    <string name="get_power_on">현재 상태 : 켜짐</string>
    <string name="get_power_off">현재 상태 : 꺼짐</string>
    <string name="refresh_device">검색</string>
    <string name="perm_title">AS DashBoard는 다음 권한을 필요로 합니다</string>
    <string name="perm_essential">필수 권한</string>
    <string name="perm_selectable">선택 권한</string>
    <string name="perm_gps_title">위치 권한</string>
    <string name="perm_gps_content">위치정보를 불러올 때 필요합니다</string>
    <string name="perm_bt_title">블루투스 권한</string>
    <string name="perm_bt_content">장치 스캔 및 연결 시 필요합니다\n</string>
    <string name="perm_wifi_title">와이파이 권한</string>
    <string name="perm_wifi_content">데이터 전송 및 수신에 필요합니다</string>
    <string name="perm_accept">승인</string>
    <string name="perm_deny">거부</string>
    <string name="mqtt">Mqtt</string>
    <string name="mqtt_deny">데이터 전송을 거부합니다</string>
    <string name="mqtt_accept">데이터 전송을 허용합니다</string>
    <string name="mqtt_caution_msg">인터넷에 연결하거나 인터넷 사용 체크를 해제하여 주십시오</string>
    <string name="mqtt_connect">인터넷에 연결되었습니다</string>
    <string name="mqtt_wifi_reconnect_s">인터넷 연결복구 성공</string>
    <string name="mqtt_wifi_reconnect_f">인터넷 연결복구 실패</string>
    <string name="dialog_subtitle">정말로 앱을 종료하시겠습니까?</string>
    <string name="dialog_title">대시보드 종료</string>
    <string name="dialog_conn">다른기기에 연결</string>
    <string name="fail_count">기기와 연결할 수 없습니다. 전원을 확인해주세요</string>
    <string name="time_zone">yy년 MM월 dd일 HH:mm</string>
    <string name="empty_list">사용 가능한 디바이스를 찾지 못했습니다.</string>
</resources>