<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/sideMenuCancelIv"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/ripple_round"
        android:padding="2dp"
        android:src="@drawable/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sideMenuTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/pretendardvariable"
        android:gravity="center"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/sideMenuCancelIv"
        app:layout_constraintStart_toEndOf="@+id/sideMenuCancelIv"
        app:layout_constraintTop_toTopOf="@id/sideMenuCancelIv" />


    <ImageView
        android:id="@+id/sideMenuPowerIv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="64dp"
        android:padding="2dp"
        android:src="@drawable/power_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sideMenuTitleTv"
        app:tint="@color/side_power_small" />

    <TextView
        android:id="@+id/sideMenuPowerOffTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/pretendardvariable"
        android:gravity="center"
        android:text="@string/power_off"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/sideMenuPowerIv"
        app:layout_constraintStart_toEndOf="@+id/sideMenuPowerIv"
        app:layout_constraintTop_toTopOf="@+id/sideMenuPowerIv" />

    <View
        android:id="@+id/sideMenuLine1"
        android:layout_width="190dp"
        android:layout_height="1dp"
        android:layout_marginTop="73dp"
        android:background="@color/side_menu_line"
        app:layout_constraintStart_toStartOf="@+id/sideMenuPowerIv"
        app:layout_constraintTop_toBottomOf="@+id/sideMenuPowerIv" />

    <ImageView
        android:id="@+id/sideMenuFanIv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="120dp"
        android:padding="2dp"
        android:src="@drawable/fan_icon"
        app:layout_constraintBottom_toBottomOf="@+id/sideMenuPowerIv"
        app:layout_constraintStart_toEndOf="@+id/sideMenuPowerOffTv"
        app:layout_constraintTop_toTopOf="@+id/sideMenuPowerIv" />

    <TextView
        android:id="@+id/sideMenuFanControllTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/pretendardvariable"
        android:gravity="center"
        android:text="@string/fan_control"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/sideMenuFanIv"
        app:layout_constraintStart_toEndOf="@+id/sideMenuFanIv"
        app:layout_constraintTop_toTopOf="@+id/sideMenuFanIv" />

    <GridLayout
        android:id="@+id/sideMenuTableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="@+id/sideMenuLine2"
        app:layout_constraintStart_toStartOf="@+id/sideMenuLine2"
        app:layout_constraintTop_toBottomOf="@+id/sideMenuFanControllTv">

        <TextView
            android:id="@+id/sideMenuFan1Tv"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:background="@drawable/side_menu_nofan_tv_bg"
            android:fontFamily="@font/pretendardvariable"
            android:gravity="center"
            android:text="@string/fan_first"
            android:textAllCaps="false"
            android:textColor="@color/statusUnitText"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/sideMenuFan2Tv"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/side_menu_nofan_tv_bg"
            android:fontFamily="@font/pretendardvariable"
            android:gravity="center"
            android:text="@string/fan_second"
            android:textAllCaps="false"
            android:textColor="@color/statusUnitText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sideMenuFan3Tv"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/side_menu_nofan_tv_bg"
            android:fontFamily="@font/pretendardvariable"
            android:gravity="center"
            android:text="@string/fan_third"
            android:textAllCaps="false"
            android:textColor="@color/statusUnitText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sideMenuFan4Tv"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/side_menu_nofan_tv_bg"
            android:fontFamily="@font/pretendardvariable"
            android:gravity="center"
            android:text="@string/fan_fourth"
            android:textAllCaps="false"
            android:textColor="@color/statusUnitText"
            android:textSize="15sp" />

    </GridLayout>

    <View
        android:id="@+id/sideMenuLine2"
        android:layout_width="236dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/side_menu_line"
        app:layout_constraintStart_toStartOf="@+id/sideMenuFanIv"
        app:layout_constraintTop_toBottomOf="@+id/sideMenuTableRow1" />

    <ImageView
        android:id="@+id/sideMenuInfoIv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/info_icon"
        app:layout_constraintStart_toStartOf="@+id/sideMenuPowerIv"
        app:layout_constraintTop_toBottomOf="@+id/sideMenuLine1"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/sideMenuInfoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/pretendardvariable"
        android:gravity="center"
        android:text="@string/product_info"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="@+id/sideMenuInfoIv"
        app:layout_constraintStart_toEndOf="@+id/sideMenuInfoIv"
        app:layout_constraintTop_toTopOf="@+id/sideMenuInfoIv" />

    <TableLayout
        android:id="@+id/sideMenuTableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/sideMenuInfoIv"
        app:layout_constraintTop_toBottomOf="@+id/sideMenuInfoTv">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardvariable"
                android:text="@string/product_type"
                android:textColor="@color/statusUnitText"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/SideMenuProductTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/pretendardvariable"
                android:gravity="start"
                android:text="@string/bio_sentinel_100"
                android:textColor="@color/statusUnitText"
                android:textSize="13sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardvariable"
                android:text="@string/serial_num"
                android:textColor="@color/statusUnitText"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/sideMenuSerialNumTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/pretendardvariable"
                android:gravity="start"
                android:text="TIA0001565"
                android:textColor="@color/statusUnitText"
                android:textSize="13sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardvariable"
                android:text="@string/setup_date"
                android:textColor="@color/statusUnitText"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/sideMenuSetUpDateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:fontFamily="@font/pretendardvariable"
                android:gravity="start"
                android:text="2022-07-05"
                android:textColor="@color/statusUnitText"
                android:textSize="13sp" />
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/sideMenuLine3"
        android:layout_width="190dp"
        android:layout_height="1dp"
        android:layout_marginTop="27dp"
        android:background="@color/side_menu_line"
        app:layout_constraintEnd_toEndOf="@+id/sideMenuLine1"
        app:layout_constraintStart_toStartOf="@+id/sideMenuLine1"
        app:layout_constraintTop_toBottomOf="@+id/sideMenuTableLayout1" />

    <ImageView
        android:id="@+id/sideMenuProductIv"
        android:layout_width="226dp"
        android:layout_height="226dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="60dp"
        android:alpha="0.85"
        android:src="@drawable/side_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sideMenuFanControllTv" />

    <ImageView
        android:id="@+id/sideMenuLogoIv"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:src="@drawable/as_logo"
        app:layout_constraintStart_toStartOf="@+id/sideMenuCancelIv"
        app:layout_constraintTop_toBottomOf="@+id/sideMenuLine3" />

    <TableRow
        android:id="@+id/sideMenuTableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/sideMenuLogoIv"
        app:layout_constraintTop_toBottomOf="@+id/sideMenuLogoIv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendardvariable"
            android:text="@string/company_name"
            android:textAllCaps="false"
            android:textColor="@color/statusUnitText"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:fontFamily="@font/pretendardvariable"
            android:text="@string/information"
            android:textAllCaps="false"
            android:textColor="@color/statusUnitText"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:fontFamily="@font/pretendardvariable"
            android:text="@string/web_site"
            android:textAllCaps="false"
            android:textColor="@color/statusUnitText"
            android:textSize="12sp" />
    </TableRow>
</androidx.constraintlayout.widget.ConstraintLayout>