<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/sideDialogIconIv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/big_power_icon" />

    <TextView
        android:id="@+id/sideDialogContextTv"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/sideDialogIconIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/pretendardvariable"
        android:text="@string/ask_turn_off"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_below="@+id/sideDialogContextTv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sidedialogOkTv"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:background="@drawable/side_dialog_btn_bg"
            android:fontFamily="@font/pretendardvariable"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sidedialogCancelTv"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/side_dialog_btn_bg"
            android:fontFamily="@font/pretendardvariable"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </TableRow>


</RelativeLayout>